--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -14,3 +14,5 @@ deviceName=${crowdar.deviceName}
 os.version=${crowdar.os.version}
 crowdar.driverHub=${crowdar.driverHub}
 crowdar.projectType.remoteDriverType=${crowdar.remoteDriverType}
+appActivity=${crowdar.appActivity}
+appOfd=${crowdar.appOfd}
